--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
+  },
+  "dependencies": {
+    "@iconify/icons-wi": "^1.2.3",
+    "@iconify/react": "^5.2.0"
   }
 }
