--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
+    "@iconify/iconify": "^3.1.1",
     "@iconify/icons-wi": "^1.2.3",
-    "@iconify/react": "^5.2.0"
+    "@iconify/react": "^5.2.0",
+    "iconify": "^1.4.0"
   }
 }
