--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "css-loader": "^7.1.2",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
@@ -20,6 +21,7 @@
     "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
+    "@iconify-icons/wi": "^1.2.3",
     "@iconify/iconify": "^3.1.1",
     "@iconify/icons-wi": "^1.2.3",
     "@iconify/react": "^5.2.0",
